# cryofall-log-reader

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Lock.h  LogFileParser.cpp  LogFileParser.h  LogReaderCmake.cpp  LogReaderCmake.h  README.md  api.h  common.cpp  common.h  conanfile.txt  configuration.cpp  configuration.h  file.cpp  file.h  http.cpp  http.h  server.cpp  server.h  update.cpp  update.h
curl/: libcurl_a.lib
